# SSS

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  Untitled.ipynb  pyproject.toml  setup.py  sss.yml
.github/workflows/: tests.yml
ID_tabletool/: PosttableSnippet.xml  PretableSnippet.xml  SSSnippet.py  TableSnippet.xml  TableSnippet2.xml  xl2idSSS.py
Jupyter Notebooks/: aziza_wage_gap.ipynb  data_preprocess_formap.ipynb  gender_wage_gap.ipynb  poverty_th.csv
R_map/: app.R  com_puma_mapinfor.R  comb_puma_mapinfor.RData  global.R  index.htm  manifest.json  pre_puma_sp.R  pre_state_sp.R  state_per.RData  style.css
R_map/packrat/desc/: BH  DBI  KernSmooth  R6  Rcpp  ash  askpass  assertthat  backports  blob  broom  callr  cellranger  classInt  cli  clipr  colorspace  commonmark  cpp11  crayon  crosstalk  curl  data.table  dbplyr  desc  digest  dplyr  e1071  ellipsis  evaluate  fansi  farver  fastmap  forcats  fs  generics  ggalt  ggplot2  glue  gtable  (+81 more)
R_map/rsconnect/shinyapps.io/chengren/: sss_dssg.dcf
R_map/www/: bootstrap.min.css
alembic/: env.py
alembic/versions/: 289eea117549_add_food_column_to_sss.py  35885c2a84ba_initial_revision.py
ci/: example_config.json  min_versions.yml  sss_testing.yml  test.yml
docs/: computer_setup.md  developer_documentation.md  user_documentation.md
docs/source/: conf.py  developer_docs.rst  functions.rst  make_computer_setup.py  make_doc_rst_files.py  make_index.py  table_definitions.rst
jupyter_notebooks/: Remove and Add Rows to Database.ipynb  Single_adult_query.ipynb  city_comparison.ipynb  database_training.ipynb  graduate_student_wages-Copy1.ipynb  graduate_student_wages.ipynb  montgomery_analysis .ipynb
scripts/: add_one_entry_reportdb.py  create_database.py  data_to_city.py  data_to_geoid.py  data_to_primary.py  data_to_puma.py  data_to_report.py
src/sss/: __init__.py  base.py  city.py  db_check.py  geoid.py  preprocess.py  puma.py  report.py  sss_table.py
src/sss/data/: poverty_th.csv
src/sss/data/geoid_data/: SSScounty-place-list_20220720.xlsx  SSScounty-place-list_20220720_misnamed_column.xlsx
src/sss/data/puma_data/puma_text/: PUMSEQ10_12.txt  PUMSEQ10_23.txt  PUMSEQ10_25.txt  PUMSEQ10_33.txt  PUMSEQ10_36.txt
src/sss/data/report_data/: Year_Type_SSS_CPI month year_20220715_DBu.xlsx
src/sss/data/sss_data/: AZ2021_SSS_Full.xlsb  AZ2025_SSS_Full.xlsx  FL2021_SSS_Full.xlsb
sss/: __init__.py  add_city.py  add_puma.py  add_report.py  base.py  capital_practice.py  city.py  db_check.py  file_to_table.py  geoid.py  geoidentifier_creator.py  health_care.py  miscellaneous.py  preprocess.py  puma.py  report.py  sss.py  sss_table.py
sss/data/: AZ2018_SSS_Full.xlsx  __init__.py  poverty_th.csv
sss/data/geoid_data/: SSScounty-place-list_20220720.xlsx  SSScounty-place-list_20220720_duplicated_rows.xlsx  StateAbbreviation_Regions_07192022_AKu.xlsx  StateAbbreviation_Regions_07192022_AKu_duplicate_rows.xlsx
sss/data/puma_data/: SSSplaces_NY&WA_PUMAcode.xlsx
sss/data/puma_data/puma_text/: PUMSEQ10_12.txt  PUMSEQ10_23.txt  PUMSEQ10_25.txt  PUMSEQ10_30.txt  PUMSEQ10_33.txt  PUMSEQ10_36.txt  PUMSEQ10_53.txt
sss/data/report_data/: Year_Type_SSS_CPI month year_20220715_DBu.xlsx
sss/data/sss_data/: CO2025_SSS_Partial.xlsx  MS2009_SSS_Full.xlsx
sss/tests/: __init__.py  conftest.py  test_base.py  test_city.py  test_geoid.py  test_puma.py  test_report.py  test_sss.py
tests/: conftest.py  test_base.py  test_city.py  test_db_check.py  test_geoid.py  test_puma.py  test_report.py  test_sss.py
